@@ -2,6 +2,7 @@ Release 2.2
 
 #113 Upgrade Cayenne to 4.0.M4 to fix overlapping transactions
 #114 Targets mapped event before merging update
+#116 tokenManager is null in DefaultDeleteBuilder
 #117 JdbcNormalizer for java.time classes
 
 Release 2.1
